[#12081] User-friendliness: Fix margins on mobile (#12096)
* Redo all changes over the last few days

* Missed out a few changes

* Resolve comments

* Update tests

--- a/src/web/app/components/question-text-with-info/question-text-with-info.component.scss
+++ b/src/web/app/components/question-text-with-info/question-text-with-info.component.scss
@@ -1,3 +1,7 @@
 .padding-0 {
   padding: 0;
 }
+
+.col-auto {
+  flex: 0 1 auto;
+}
