--- a/src/web/app/pages-static/about-page/about-page.component.scss
+++ b/src/web/app/pages-static/about-page/about-page.component.scss
@@ -16,6 +16,5 @@
 }
 
 .core-team-details-cell {
-  min-width: 360px;
   padding-right: 40px;
 }
